--- a/templates/recent.html
+++ b/templates/recent.html
@@ -4,7 +4,7 @@
 
     {% for post in posts %}
         <div class="post">
-            <div class="postTitle">{{post.title}}</div>
+            <div class="postTitle"><a href="blog/{{post.key().id()}}">{{post.title}}</a></div>
             <div class="postContent">{{post.content}}</div>
         </div>
     {% endfor %}
