--- a/templates/base.html
+++ b/templates/base.html
@@ -28,9 +28,9 @@
     </head>
     <body>
         <h1>
-            <a href="/blog">Build-A-Blog</a>
+            Build-A-Blog
         </h1>
-        <p>Please click <a href="/newpost">here</a> to add a new post.</p>
+        <p><a href="/blog">Home</a></p><p><a href="/newpost">Add A New Post</a></p>
 
         {% block content %}
         {% endblock %}
