--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
         <h1>
             Build-A-Blog
         </h1>
-        <p><a href="/blog">Home</a></p><p><a href="/newpost">Add A New Post</a></p>
+        <p><a href="/blog">Recent Posts</a></p><p><a href="/newpost">Add A New Post</a></p>
 
         {% block content %}
         {% endblock %}
