--- a/templates/front.html
+++ b/templates/front.html
@@ -10,8 +10,14 @@
         <div>content</div>
         <textarea name="content">{{content}}</textarea>
     </label>
-    <div class="error">{{error}}</div>
+
+    <div class="error"><P>{{titleerror}}</P></div>
+    <div class="error"><P>{{contenterror}}</P></div>
+
+    <!-- <div class="error">{{error}}</div> -->
+
     <input type="submit">
+
 </form>
 
     <hr>
@@ -24,5 +30,7 @@
         </div>
 
     {% endfor %}
+
+    <a href=""
 
 {% endblock %}
